--- a/pages/blog/2016-08-07-actionhero-v15.mdx
+++ b/pages/blog/2016-08-07-actionhero-v15.mdx
@@ -4,7 +4,8 @@ description: >-
   A quick note to say that ActionHero has reached version 15. You can read the
   full release notes here.
 date: "2016-08-07T00:29:56.849Z"
-tags: []
+tags: ["actionhero", "open source", "javascript", "node.js"]
+image: /images/medium-export/1__0QCxQAd2jc1P8__yHWNWIUQ.png
 # slug: /@evantahler/actionhero-v15-0-0-and-release-cadence-ed22cfacc8b6
 ---
 
@@ -16,7 +17,7 @@ We now have a robust task middleware system (including middleware that can modif
 
 ![](/images/medium-export/1__ferA1ehHF40hn5EDKPGiXw.png)
 
-I’m \*very happy\* to say that the majority of the work on this release has been done by community members, specifically GitHub users [l0oky](https://github.com/l0oky) and [gcoonrod](https://github.com/gcoonrod).
+I’m **very happy** to say that the majority of the work on this release has been done by community members, specifically GitHub users [l0oky](https://github.com/l0oky) and [gcoonrod](https://github.com/gcoonrod).
 
 ### ActionHero Upgrade Guide
 
