--- a/pages/blog/2016-10-26-actionhero-nodejs-v7.mdx
+++ b/pages/blog/2016-10-26-actionhero-nodejs-v7.mdx
@@ -2,7 +2,8 @@
 title: ActionHero and Node.JS v7
 description: Does ActionHero work with with the newly released Node.js v7?
 date: "2016-10-26T17:41:10.436Z"
-tags: []
+tags: ["actionhero", "node.js", "javascript"]
+image: /images/medium-export/1__1aBZOO8chVHmePbMxUTl0w.png
 # slug: /@evantahler/actionhero-and-node-js-v7-ad6bb09de4d2
 ---
 
