--- a/pages/blog/2016-12-14-actionhero-and-standardjs.mdx
+++ b/pages/blog/2016-12-14-actionhero-and-standardjs.mdx
@@ -4,7 +4,8 @@ description: >-
   I don’t want to talk about ESLint ever again. I don’t ever want to talk about
   "code style" ever again. I want to write code, and I want the…
 date: "2016-12-14T01:06:40.974Z"
-tags: []
+tags: ["actionhero", "node.js", "javascript"]
+image: /images/medium-export/1__QEsaQMJW6Ysa9HYNlV9XiA.png
 # slug: /@evantahler/actionhero-standard-js-1be0e6b0f1d4
 ---
 
