--- a/pages/blog/2016-10-29-deploying-from-flynn-to-travisci.mdx
+++ b/pages/blog/2016-10-29-deploying-from-flynn-to-travisci.mdx
@@ -4,11 +4,12 @@ description: >-
   In my previous post, I shared some tips on creating a production Flynn
   cluster. If you don’t know, Flynn is a an open-source self-hosted…
 date: "2016-10-29T17:56:27.607Z"
-tags: []
+tags: ["gitops", "flynn", "ci"]
+image: /images/medium-export/1__yZ45b6I1QGRBwWtQqNqBiA.png
 # slug: /@evantahler/deploying-to-flynn-from-travis-ci-d28f73e3ac99
 ---
 
-In [my previous post](https://blog.evantahler.com/productionizing-flynn-and-hosting-your-root-domain-s-fc849638e206#.e1f6yjk7i), I shared some tips on creating a production Flynn cluster. If you don’t know, [Flynn](https://flynn.io) is a an open-source self-hosted Heroku replacement (PASS).
+In my previous post, I shared some tips on creating a production Flynn cluster. If you don’t know, [Flynn](https://flynn.io) is a an open-source self-hosted Heroku replacement (PASS).
 
 In this article, I’ll share some tips on how to set up continuous integration using [Travis.CI](https://travis-ci.org/) and you Flynn server. This project assumes you already have your project’s test suite running automatically on Travis.CI.
 
@@ -22,41 +23,42 @@ However, you don’t _need_ to use this system-level keystore if you **configure
 
 First, you’ll need the Travis ruby gem installed:
 
+```bash
 gem install travis
+```
 
 Then, you’ll be using the gem to encrypt your Flynn cluster Key (which you can find in `~/.flynnrc`. Travis lets you store encrypted data within your project’s `.travis.yml` configuration file. This allows you to share your project with no worry that anyone other than the Travis severs can deploy to your cluster.
 
+```bash
 travis encrypt FLYNN_KEY=XXXXXXX
+```
 
 Now take that encrypted output and add it to your project’s `.travis.yml` under the `secure` directive.
 
 Next, we’ll use the Travis’ `after-success` lifecycle event to tell Travis to push our now-tested branch to the server:
 
+```yml
 after_success:
-
-- git pull
-- git remote add flynn [https://user:$FLYNN_KEY@git.site.com/myapp.git](https://user:$FLYNN_KEY@git.messagebot.io/www.git)
-- git push flynn master
+  - git pull
+  - git remote add flynn [https://user:$FLYNN_KEY@git.site.com/myapp.git](https://user:$FLYNN_KEY@git.messagebot.io/www.git)
+  - git push flynn master
+```
 
 A complete file for a [Node.js](https://medium.com/u/96cd9a1fb56) project would look like:
 
+```yml
 sudo: false
 language: node_js
 node_js:
-
-- "6"
-
+  - "6"
 env:
-
-- secure: "YYYYYYYYYYYYYYY="
-
+  - secure: "YYYYYYYYYYYYYYY="
 after_success:
-
-- git pull
-- git remote add flynn [https://user:$FLYNN_KEY@git.server.com/myapp.git](https://user:$FLYNN_KEY@git.messagebot.io/www.git) || true
-- git push flynn master
-
+  - git pull
+  - git remote add flynn https://user:$FLYNN_KEY@git.server.com/myapp.git || true
+  - git push flynn master
 script: npm run test
+```
 
 And that’s it! Travis will now deploy to Flynn in a secure way after every green build.
 
@@ -73,5 +75,29 @@ However, there is no built-in way for Travis to expose what would amount to an `
 You may only want to deploy to your Flynn cluster when certain branches are tested. Perhaps `master` should be deployed to `staging.site.com` and `production` should be deployed to `www.site.com`. When testing on Travis, you have a few [environment variables](https://docs.travis-ci.com/user/environment-variables/#Default-Environment-Variables) exposed to you, such as: `TRAVIS_BRANCH` which you can use to make decisions about how to deploy.
 
 The example I described above would look like:
+
+```yml
+sudo: false
+language: node_js
+node_js:
+  - "6"
+
+env:
+  - secure: "xxxxxxxxxx="
+
+after_success:
+  - |
+    FLYNN_APP=""
+    if [ "$TRAVIS_BRANCH" = "master" ]; then FLYNN_APP="www-staging"; fi
+    if [ "$TRAVIS_BRANCH" = "production" ]; then FLYNN_APP="www"; fi
+    if [ "$FLYNN_APP" = "" ]; then
+      echo "skipping branch $TRAVIS_BRANCH"
+    else
+      git pull
+      git remote add flynn https://user:$FLYNN_KEY@git.site.com/$FLYNN_APP.git
+      git push flynn master
+    fi
+script: npm run test
+```
 
 (why yes, you _can_ write bash directly in your `.travis.yml` file!)
